J'ai ajouter une copie des fichiers html contenant les appendix FE et urban dans le r directory "personnal_website" et j'ai changer l'adresse des liens sur le site

--- a/index.Rmd
+++ b/index.Rmd
@@ -5,7 +5,7 @@ output: html_document
 
 <div class="row">
 <div class="col-md-6">
-![](C:/Users/rebou/OneDrive/Bureau/Stats/R/Projets/personnal_website/moi.jpeg)
+![](moi.jpeg)
 
 [**LED Université Paris 8**](https://sites.google.com/site/up8led/)
 
