--- a/publications.Rmd
+++ b/publications.Rmd
@@ -7,104 +7,104 @@ title: "Publications"
 
 ## Research Articles
 
-2024 "Land, Space or Cities: A History of 'Urban Economics' as a Field" (with Beatrice
-Cherrier) *in revision* \
+- 2024 -- "Land, Space or Cities: A History of 'Urban Economics' as a Field" ([with Beatrice
+Cherrier](https://beatricecherrier.wordpress.com/about/)) *in revision* \
 [[**SSRN**]](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4450141) [[**ONLINE APPENDIX**]](online_appendix_urban.html)
 
-2024 "History of IAFFE Presidents’ Trajectories and Cognitive Interactions" (with Rebeca Gomez Betancourt and Camila Orozco Espinel)\
+- 2024 -- "History of IAFFE Presidents’ Trajectories and Cognitive Interactions" (with [Rebeca Gomez Betancourt](https://triangle.ens-lyon.fr/spip.php?article1356) and [Camila Orozco Espinel](https://univ-reims.academia.edu/CamilaOrozcoEspinel) )\
 [**SSRN**] [[**ONLINE APPENDIX**]](Online_Appendix_FE.html)
 
-<br>
+***
 
 ## Working Articles
 
-2024 "The Reception of Dixit-Stiglitz Monopolistic Competition Model"\
+- 2024 -- "The Reception of Dixit-Stiglitz Monopolistic Competition Model"\
 [**DRAFT**] [**ONLINE APPENDIX**]
 
-2023 "The Diffusion of Monocentric City Models of Land Use: How AMM Became Mainstream"\
+- 2023 -- "The Diffusion of Monocentric City Models of Land Use: How AMM Became Mainstream"\
 [**DRAFT**]
 
-2022 "In Research of a Disciplinary Identity: The Institutionalization of Regional Science"\
+- 2022 -- "In Research of a Disciplinary Identity: The Institutionalization of Regional Science"\
 [**DRAFT**] [**ONLINE APPENDIX**]
 
-2020 "‘New Economic Geography’ and The Evolution of the Relationships Between Economics and Geography (1980-2015)"\
+- 2020 -- "‘New Economic Geography’ and The Evolution of the Relationships Between Economics and Geography (1980-2015)"\
 [**SSRN**]
 
-<br>
+***
 
 ## Blog Posts
 
-2020 “Cities, Land and Space: A History of ‘Urban Economics’ As a Field” (with Béatrice Cherrier)\
+- 2020 -- “Cities, Land and Space: A History of ‘Urban Economics’ As a Field” (with Béatrice Cherrier)\
 [[**POST**]](https://hscif.org/economists-in-the-city-cherrierrebours/)
 
 
-2020 "The institutionalization of Regional Science in the Shadow of Economics”\
+- 2020 -- "The institutionalization of Regional Science in the Shadow of Economics”\
 [[**POST**]](https://hscif.org/economists-in-the-city-rebours/)
 
-<br>
+***
 
 ## Presentations
 
-June 2023 "Do Feminists Economists Form a Community of Scholars?" (with Rebeca Gomez Betancourt and Camila Orozco Espinel)\
-**Presented in distance [26th Annual Conference of the European Society for the History of Economic Thought (ESHET)](https://www.eshet-conference.net/liege/ed2023/program/)**
+- **June 2023 -- "Do Feminists Economists Form a Community of Scholars?" (with Rebeca Gomez Betancourt and Camila Orozco Espinel)**\
+Presented in distance [26th Annual Conference of the European Society for the History of Economic Thought (ESHET)](https://www.eshet-conference.net/liege/ed2023/program/)
 
 
-December 2022 "The Diffusion of the Monocentric City Model"\
-**Workshop of the [Society for the History of Recent Social Science (HISRESS)](https://hisress.org/)  “Transforming Homo Economicus”\
-Institution National d'Etudes Démographique (INED)**
+- **December 2022 -- "The Diffusion of the Monocentric City Model"**\
+Workshop of the [Society for the History of Recent Social Science (HISRESS)](https://hisress.org/)  “Transforming Homo Economicus”\
+Institution National d'Etudes Démographique (INED)
 
 
-June 2022 "Do Feminists economists form a communityof scholars?" (with Rebeca Gomez Betancourt and Camila Orozco Espinel)\
-**[Annual Conference of International Association For Feminist Economics (IAFFE)](https://www.iaffe.org/2022-annual-conference)\
-Graduate Institute of International and Development Studies (Genève)**
+- **June 2022 -- "Do Feminists economists form a communityof scholars?" (with Rebeca Gomez Betancourt and Camila Orozco Espinel)**\
+[Annual Conference of International Association For Feminist Economics (IAFFE)](https://www.iaffe.org/2022-annual-conference)\
+Graduate Institute of International and Development Studies (Genève)
 
 
-June 2022 "In Research of a Disciplinary Identity: The Institutionalization of Regional Science"\
-**Presentation at conference of the [Réseau en Epistémologie et en Histoire de la Pensée Economique Récente (Rehpere)](https://rehpere.org/) “Recent Shifts in the Boundaries Of Economics: Philosophy and History”\
-Maison des sciences économiques de la Sorbonne (Université Paris 1)**
+- **June 2022 -- "In Research of a Disciplinary Identity: The Institutionalization of Regional Science"**\
+Presentation at conference of the [Réseau en Epistémologie et en Histoire de la Pensée Economique Récente (Rehpere)](https://rehpere.org/) “Recent Shifts in the Boundaries Of Economics: Philosophy and History”\
+Maison des sciences économiques de la Sorbonne (Université Paris 1)
 
 
-December 2021 "In Research of a Disciplinary Identity: The Institutionalization of Regional Science"\
-**Workshop of the [Society for the History of Recent Social Science (HISRESS)](https://hisress.org/) “Economics and Other Social Sciences”\
-Institution National d'Etudes Démographique (INED)**
+- **December 2021 -- "In Research of a Disciplinary Identity: The Institutionalization of Regional Science"**\
+Workshop of the [Society for the History of Recent Social Science (HISRESS)](https://hisress.org/) “Economics and Other Social Sciences”\
+Institution National d'Etudes Démographique (INED)
 
 
-May 2021 "Cities, Land and Space: A history of ‘Urban Economics’ as a field" (with Beatrice Cherrier)\
-**Zoom Seminar of Max Planck Science Po Center (MaxPo)**
+- **May 2021 -- "Cities, Land and Space: A history of ‘Urban Economics’ as a field" (with Beatrice Cherrier)**\
+Zoom Seminar of Max Planck Science Po Center (MaxPo)
 
 
-March 2021 "Cities, Land and Space: A history of ‘Urban Economics’ as a field" (with Beatrice Cherrier)\
-**Zoom Seminar of economics department of New York University (NYU) at Abu Dhabi**
+- **March 2021 -- "Cities, Land and Space: A history of ‘Urban Economics’ as a field" (with Beatrice Cherrier)**\
+Zoom Seminar of economics department of New York University (NYU) at Abu Dhabi
 
 
-January 2020 "City and Space: The History of Urban Economics"\ 
-**Presentation at the workshop of the [Center for the History of Political Economy (CHOPE)](https://hope.econ.duke.edu/)\
-Duke University**
+- **January 2020 -- "City and Space: The History of Urban Economics"**\ 
+Presentation at the workshop of the [Center for the History of Political Economy (CHOPE)](https://hope.econ.duke.edu/)\
+Duke University
 
 
-June 2019 "Les interactions entre la géographie et l’économie (1980-2015) : une histoire bibliométrique"\
-**Presentation at Journées d’études of the Charles Gides Association "Les Evolutions des frontières disciplinaires de l’économie avec les autres sciences"\
-Université TELUQ (Montréal)**
+- **June 2019 -- "Les interactions entre la géographie et l’économie (1980-2015) : une histoire bibliométrique"**\
+Presentation at Journées d’études of the Charles Gides Association "Les Evolutions des frontières disciplinaires de l’économie avec les autres sciences"\
+Université TELUQ (Montréal)
 
 
-June 2019 "Les interactions entre la géographie et l’économie (1980-2015) : une histoire bibliométrique"\
-**Presentation at the [Centre Interuniversitaire de Recherche sur la Science et la Technologie (CIRST)](https://cirst.uqam.ca/)\
-Université du Québec A Montréal (UQAM)**
+- **June 2019 -- "Les interactions entre la géographie et l’économie (1980-2015) : une histoire bibliométrique"**\
+Presentation at the [Centre Interuniversitaire de Recherche sur la Science et la Technologie (CIRST)](https://cirst.uqam.ca/)\
+Université du Québec A Montréal (UQAM)
 
 
-May 2019 "The Evolution of the Relationships Between Economy and Geography (1980-2015):
-A Bibliometric Study"\
-**Young Scholar presentation for the [23rd Annual Conference of European Society for the History of Economic Thought (ESHET)](https://www.eshet.net/list-of-past-conferences/)\
-Science Po Lille**
+- **May 2019 -- "The Evolution of the Relationships Between Economy and Geography (1980-2015):
+A Bibliometric Study"**\
+Young Scholar presentation for the [23rd Annual Conference of European Society for the History of Economic Thought (ESHET)](https://www.eshet.net/list-of-past-conferences/)\
+Science Po Lille
 
 
-May 2019 "The Evolution of the Relationships Between Economy and Geography (1980-2015):
-A Bibliometric Study"\
-**Workshop for Young Scholars "The Uses of Scientometrics for the History of Social Sciences" (co-organised with Alexandre Truc and Loïc Charles)\
-Université Paris 8**
+- **May 2019 -- "The Evolution of the Relationships Between Economy and Geography (1980-2015):
+A Bibliometric Study"**\
+Workshop for Young Scholars "The Uses of Scientometrics for the History of Social Sciences" (co-organised with Alexandre Truc and Loïc Charles)\
+Université Paris 8
 
-June 2018 "The Evolution of the Relationships Between Economy and Geography (1980-2015):
-A Bibliometric Study"\
-**Young Scholar presentation for the [45th Annual Conference of History of Economic Society (HES)](https://historyofeconomics.org/wp-content/uploads/2018/06/2018-Conference-Program-finalBW.pdf)\
-Loyola University Chicago**
+- **June 2018 -- "The Evolution of the Relationships Between Economy and Geography (1980-2015):
+A Bibliometric Study"**\
+Young Scholar presentation for the [45th Annual Conference of History of Economic Society (HES)](https://historyofeconomics.org/wp-content/uploads/2018/06/2018-Conference-Program-finalBW.pdf)\
+Loyola University Chicago
 
