Adding links to footer and change a few details in the code

--- a/index.Rmd
+++ b/index.Rmd
@@ -20,7 +20,7 @@ Université Paris 8
 [`r fa(name = "file-lines", prefer_type = "solid")` curriculum vitae](cv.pdf)
 </div>
 <div class="col-md-6">
-I am a young historian of economics. My research focuses on the structuring of economics as a scientific discipline and its relationships with other social sciences, notably geography and planning sciences, after 1945. I am more particularly interested in studying the evolution of fields such as regional science, urban economics and new economic geography. 
+I am a historian of economics. My research focuses on the structuring of economics as a scientific discipline and its relationships with other social sciences, notably geography and planning sciences, after 1945. I am more particularly interested in studying the evolution of fields such as regional science, urban economics and new economic geography. 
 
 Through these topics, I am led to explore the works of various disciplines that have influenced the research of economists interested in spatial issues. In my work I also rely a lot on quantitative tools dedicated to the study of sciences (bibliometrics techniques and network analysis).
 </div>
